--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,6 +1,6 @@
 <app-shared-user-header page="Accueil"></app-shared-user-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" color=medium>
     <ion-header collapse="condense">
         <ion-toolbar>
             <ion-title size="large">Blanks</ion-title>
