--- a/src/app/composants/shared-user-header/shared-user-header.component.html
+++ b/src/app/composants/shared-user-header/shared-user-header.component.html
@@ -1,8 +1,8 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="false">
     <ion-toolbar color=primary>
         <ion-buttons slot="start">
             <ion-menu-button color="light"></ion-menu-button>
-            <ion-img class="logo" src="assets/images/logoDaherFondBleu.png" (click)="navigateHome()">
+            <ion-img class="ion-hide-sm-down logo" src="assets/images/logoDaherFondBleu.png" (click)="navigateHome()">
             </ion-img>
         </ion-buttons>
         <ion-title class="ion-text-uppercase ion-text-center">{{page}}</ion-title>
@@ -21,11 +21,15 @@
                             <ion-label>Préférences</ion-label>
                             <ion-icon name="settings-outline" slot="start"></ion-icon>
                         </ion-item>
+                        <ion-item color="danger" class="ion-hide-sm-up" (click)="logoutClick()">
+                            <ion-icon slot="start" name="log-out-outline"></ion-icon>
+                            <ion-label>Déconnexion</ion-label>
+                        </ion-item>
                     </ion-list>
                 </ion-content>
             </ng-template>
         </ion-popover>
-        <ion-button slot=end color="danger" (click)="logoutClick()">
+        <ion-button class="ion-hide-sm-down" slot=end color="danger" (click)="logoutClick()">
             <ion-icon slot="end" name="log-out-outline"></ion-icon>
             <ion-label class="ion-hide-md-down">Déconnexion</ion-label>
         </ion-button>
