--- a/src/app/pages/admin/admin.page.html
+++ b/src/app/pages/admin/admin.page.html
@@ -13,12 +13,12 @@
         </ion-header>
         <ion-content>
             <ion-list>
-                <ion-item>
+                <ion-item routerLink="admin-user">
                     <ion-label>Utilisateurs</ion-label>
                     <ion-badge slot="end">11</ion-badge>
                 </ion-item>
                 <ion-item>Outillages</ion-item>
-                <ion-item>Moulages</ion-item>
+                <ion-item>Moulages </ion-item>
                 <ion-item>Kits</ion-item>
             </ion-list>
         </ion-content>
