--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -12,13 +12,13 @@
                     <ion-label position="floating">Nom d'utilisateur
                         <ion-text color="danger">*</ion-text>
                     </ion-label>
-                    <ion-input #userName required formControlName="userName" type="text"></ion-input>
+                    <ion-input autocapitalize="on" #userName required formControlName="userName" type="text" autocomplete=off autofocus="true" inputmode=numeric value=""></ion-input>
                 </ion-item>
                 <ion-item>
                     <ion-label position="floating">Password
                         <ion-text color="danger">*</ion-text>
                     </ion-label>
-                    <ion-input #password required formControlName="password" type="password" value="123"></ion-input>
+                    <ion-input #password formControlName="password" type="password" value=""></ion-input>
                 </ion-item>
                 <ion-button block color="primary" type="submit" [disabled]="loginForm.invalid">
                     Se connecter
