--- a/src/app/pages/admin/admin.page.html
+++ b/src/app/pages/admin/admin.page.html
@@ -1,8 +1,4 @@
-<ion-header>
-    <ion-toolbar>
-        <ion-title>admin</ion-title>
-    </ion-toolbar>
-</ion-header>
+<app-shared-admin-header></app-shared-admin-header>
 
 <ion-content>
     <ion-menu side="start" type="push" contentId="admin-content" max-edge-start=10>
