Ajout titre application

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -7,12 +7,17 @@
 <ion-content [fullscreen]="true">
     <ion-grid fixed class="full-height ion-align-items-center ion-justify-content-center">
         <ion-row>
+            <ion-col size="12">
+                <ion-title color=primary>Application traçabilité</ion-title>
+            </ion-col>
+        </ion-row>
+        <ion-row class="ion-align-items-center">
             <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" (keyup.enter)="onSubmit()">
                 <ion-item>
                     <ion-label position="floating">Nom d'utilisateur
                         <ion-text color="danger">*</ion-text>
                     </ion-label>
-                    <ion-input autocapitalize="on" #userName required formControlName="userName" type="text" autocomplete=off autofocus="true" inputmode=numeric value=""></ion-input>
+                    <ion-input autocapitalize="on" #userName required formControlName="userName" type="text" autocomplete=off autofocus="true" inputmode=numeric value="204292"></ion-input>
                 </ion-item>
                 <ion-item>
                     <ion-label position="floating">Password
