--- a/src/app/pages/admin/admin.page.html
+++ b/src/app/pages/admin/admin.page.html
@@ -14,7 +14,7 @@
                     <ion-badge slot="end">11</ion-badge>
                 </ion-item>
                 <ion-item>Outillages</ion-item>
-                <ion-item>Moulages </ion-item>
+                <ion-item routerLink="admin-molding">Moulages </ion-item>
                 <ion-item>Kits</ion-item>
             </ion-list>
         </ion-content>
